k8s/coma/apps/onlyoffice-docserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlyoffice-docserver
  namespace: onlyoffice-docserver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "onlyoffice.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: documentserver
                port:
                  number: 8888
  tls:
    - hosts:
        - "onlyoffice.artichoke.cc"
      secretName: artichokecc-cert
